redo websocket connection without immediate retry